# aoc2025

./: .gitignore
aoc_helper/: README.md  pyproject.toml
aoc_helper/src/aoc_helper/: __init__.py  clipboard.py  input.py  parsing.py
day03/: day3.py
day06/: day6.py
day07/: day7.py
day1/: day1.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day2/: day2.py
day4/: day4.py
day5/: day5.py
day7/: day7.py
day8/: day8.py
day9/: day9.py
