[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc_helper"
version = "0.0.1"
authors = [
    { name="Andrew", email="email@email.com" },
]
description = "Common aoc helper items"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/areddish/aoc2024"
Issues = "https://github.com/areddish/aoc2024/issues"